tests/snapshots/fix__fixes_again_while_another_pass_leaves_fewer_issues-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1494 1060">
        <g data-node="aml">
          <rect x="40" y="40" width="196" height="60" rx="14"/>
          <text x="138" y="66" font-size="13" text-anchor="middle">9 AML Screening</text>
          <text x="138" y="85" font-size="11" text-anchor="middle">fuzzy name match</text>
        </g>
        <g data-node="fx">
          <rect x="446" y="40" width="196" height="60" rx="14"/>
          <text x="544" y="66" font-size="13" text-anchor="middle">10 FX Quote</text>
          <text x="544" y="85" font-size="11" text-anchor="middle">spread by segment</text>
        </g>
        <g data-node="fee">
          <rect x="40" y="270" width="196" height="60" rx="14"/>
          <text x="138" y="296" font-size="13" text-anchor="middle">11 Fee Calc</text>
          <text x="138" y="315" font-size="11" text-anchor="middle">legacy + new, diffed</text>
        </g>
        <g data-node="route">
          <rect x="446" y="270" width="196" height="60" rx="14"/>
          <text x="544" y="296" font-size="13" text-anchor="middle">16 Routing Engine</text>
          <text x="544" y="315" font-size="11" text-anchor="middle">rules in DB + code</text>
        </g>
        <g data-node="domadp">
          <rect x="852" y="270" width="196" height="60" rx="14"/>
          <text x="950" y="296" font-size="13" text-anchor="middle">17 Zengin Adapter</text>
          <text x="950" y="315" font-size="11" text-anchor="middle">C · 2006</text>
        </g>
        <g data-node="mxconv">
          <rect x="446" y="500" width="196" height="60" rx="14"/>
          <text x="544" y="526" font-size="13" text-anchor="middle">20 MT103 to MX</text>
          <text x="544" y="545" font-size="11" text-anchor="middle">ISO 20022 · 2023</text>
        </g>
        <g data-node="partneradp">
          <rect x="446" y="730" width="196" height="60" rx="14"/>
          <text x="544" y="756" font-size="13" text-anchor="middle">24 Partner Adapter</text>
          <text x="544" y="775" font-size="11" text-anchor="middle">REST + SFTP</text>
        </g>
        <g data-node="partner">
          <rect x="1258" y="730" width="196" height="60"/>
          <text x="1356" y="756" font-size="13" text-anchor="middle">Partner Remitter</text>
          <text x="1356" y="775" font-size="11" text-anchor="middle">12 corridors</text>
        </g>
        <g data-node="ratefee">
          <rect x="40" y="960" width="200.5" height="60"/>
          <text x="152" y="986" font-size="13" text-anchor="middle">D5 Rate / Fee Tables</text>
          <text x="152" y="1005" font-size="11" text-anchor="middle">Redis + Oracle</text>
        </g>
        <path id="f35" data-from="aml" data-to="route" d="M 138 100 L 138 246 L 544 246 L 544 270"/>
        <path id="f37" data-from="fx" data-to="ratefee" d="M 446 70 L 394 70 L 394 990 L 240.5 990"/>
        <path id="f42" data-from="fx" data-to="fee" d="M 544 100 L 544 226 L 128 226 L 128 270"/>
        <path id="f44" data-from="fee" data-to="route" d="M 236 300 L 446 300"/>
        <path id="f46" data-from="route" data-to="domadp" d="M 642 300 L 852 300"/>
        <path id="f47" data-from="route" data-to="mxconv" d="M 544 330 L 544 500"/>
        <path id="f48" data-from="route" data-to="partneradp" d="M 446 315 L 438 315 L 438 760 L 446 760"/>
        <path id="f56" data-from="partner" data-to="partneradp" d="M 1258 760 L 642 760"/>
        <text data-label="l35" data-label-for="f35" x="147" y="171" font-size="12" text-anchor="start">cleared order</text>
        <text data-label="l37" data-label-for="f37" x="385" y="627" font-size="12" text-anchor="end">cached rate</text>
        <text data-label="l42" data-label-for="f42" x="274" y="215" font-size="12" text-anchor="middle">quote</text>
        <text data-label="l44" data-label-for="f44" x="320" y="289" font-size="12" text-anchor="middle">priced order</text>
        <text data-label="l46" data-label-for="f46" x="747" y="289" font-size="12" text-anchor="middle">domestic</text>
        <text data-label="l47" data-label-for="f47" x="553" y="420" font-size="12" text-anchor="start">MT103</text>
        <text data-label="l48" data-label-for="f48" x="447" y="587" font-size="12" text-anchor="start">corridor</text>
        <text data-label="l56" data-label-for="f56" x="950" y="749" font-size="12" text-anchor="middle">payout confirm</text>
      </svg>
