tests/snapshots/fix__fixes_again_while_another_pass_leaves_fewer_issues.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 8,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0
}
