tests/snapshots/fix__grows_a_circular_node_around_its_label_without_moving_either-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 200">
        <g data-node="confirm">
          <circle cx="120" cy="100" r="51"/>
          <text x="120" y="105" text-anchor="middle" font-size="14">Confirmed</text>
        </g>
      </svg>
