tests/snapshots/fix__keeps_a_label_at_the_middle_when_another_connector_runs_a_little_further_off-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 400">
        <g data-node="customer"><rect x="40" y="276" width="120" height="52"/><text x="100" y="307" text-anchor="middle" font-size="13">Customer</text></g>
        <g data-node="checkout"><rect x="500" y="250" width="120" height="100"/><text x="560" y="305" text-anchor="middle" font-size="13">Check out</text></g>
        <g data-node="browse"><rect x="270" y="100" width="100" height="103"/><text x="320" y="156" text-anchor="middle" font-size="13">Browse</text></g>
        <path id="details" data-from="customer" data-to="checkout" d="M 160 297 L 500 297"/>
        <path id="confirmation" data-from="checkout" data-to="customer" d="M 500 310 L 160 310"/>
        <path id="listings" data-from="browse" data-to="customer" d="M 319 203 L 319 256 L 120 256 L 120 276"/>
        <text data-label="details-label" data-label-for="details" x="330" y="286" text-anchor="middle" font-size="11">address, card token</text>
      </svg>
