tests/snapshots/fix__keeps_a_label_at_the_middle_when_another_connector_runs_a_little_further_off.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 6.85,
  "remainingIssues": 0
}
