tests/snapshots/fix__keeps_a_moved_label_clear_of_connectors_it_does_not_belong_to.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.63,
  "remainingIssues": 0
}
