tests/snapshots/fix__keeps_aligned_ports_at_least_10px_from_other_ports_on_the_side-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 400">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="other">
          <rect x="20" y="140" width="100" height="56"/>
          <text x="70" y="173" text-anchor="middle" font-size="14">Other</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <g data-node="floor">
          <rect x="260" y="91" width="100" height="56"/>
          <text x="310" y="124" text-anchor="middle" font-size="14">Floor</text>
        </g>
        <path id="facing" data-from="source" data-to="target" fill="none" d="M 120 39 L 260 39"/>
        <path id="climbing" data-from="other" data-to="target" fill="none" d="M 120 168 L 190 168 L 190 57 L 260 57"/>
      </svg>
